[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/PlayerAnimation.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://SFX/jump1.ogg" type="AudioStream" id=7]
[ext_resource path="res://SFX/pain.ogg" type="AudioStream" id=8]
[ext_resource path="res://GFX/Particles/portal_yellowParticle.png" type="Texture" id=9]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 128.0
flag_disable_z = true
orbit_velocity = 0.5
orbit_velocity_random = 1.0
radial_accel_random = 1.0
hue_variation = 0.09
hue_variation_random = 0.56

[sub_resource type="CapsuleShape2D" id=2]
radius = 60.0
height = 82.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 531, 297 )
collision_mask = 2147483650
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
position = Vector2( 0, 12.021 )
amount = 20
lifetime = 0.5
randomness = 1.0
process_material = SubResource( 1 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="PlayerAnimation" parent="." instance=ExtResource( 1 )]

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="PainSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animate" from="." to="PlayerAnimation" method="_on_Player_animate"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
